change classes while moving

--- a/lib/overjs.scss
+++ b/lib/overjs.scss
@@ -1,14 +1,8 @@
 // overjs.scss
 .overjs {
 	&__cursor {
-		width: 16px;
-		height: 16px;
-
-		// defualt cursors
+		// defualt cursor
 		&-default {
-			border-radius: 50%;
-			overflow: hidden;
-
 			// cursor styles
 			.circle-cursor {
 				width: 10px;
@@ -16,6 +10,17 @@
 
 				border: 3px solid rgba(255,255,255,0.7);
 				border-radius: 10px;
+
+				transform-origin: 50% 50%;
+				transition: transform .3s ease;
+			}
+		}
+
+		// while moving
+		&-moving {
+			// cursor styles
+			.circle-cursor {
+				transform: scale(2);
 			}
 		}
 	}
